# LSC

./: CMakeLists.txt  README.md
inc/: SphereImage.hpp  edgeTest.hpp  yolov5.hpp
src/: SphereImage.cpp  edgeTest.cpp  main.cpp  yolov5.cpp
